--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 		<script src="routes.js"></script>
 		<script src="./js/homeController.js"></script>
 		<script src="./js/newKidController.js"></script>
+		<script src="./js/loginController.js"></script>
 	</head>
 	<body>
 		<div ng-view="">
