finished the front end design

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,12 @@
 		<script src="routes.js"></script>
 		<script src="./js/homeController.js"></script>
 		<script src="./js/newKidController.js"></script>
-
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<style>
+		body {
+			font-family: 'Open Sans', sans-serif;
+		}
+		</style>
 	</head>
 	<body>
 		<div ng-view="">
