--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 		<script src="routes.js"></script>
 		<script src="./js/homeController.js"></script>
 		<script src="./js/newKidController.js"></script>
-
+		<script src="./js/kidController.js"></script>
 	</head>
 	<body>
 		<div ng-view="">
